# video-engine

./: .gitignore  pyproject.toml
video_engine/: __init__.py
video_engine/clients/: claude.py  dalle.py  elevenlabs.py  grok.py  pexels.py
video_engine/pipeline/: core.py  engine.py
video_engine/prompts/: footage.py  long_form.py  media.py  overlays.py  research.py  shorts.py  video_review.py  visual_planning.py  writing.py
video_engine/providers/: __init__.py  image.py  llm.py  tts.py  video.py
video_engine/rendering/: branding.py  cards.py  compositor.py  director.py  fonts.py  image_gen.py  overlays.py  qa.py  shorts_compositor.py  thumbnail.py
